--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mysql2": "^2.2.5",
     "path": "^0.12.7",
+    "prohairesis": "^1.2.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typescript": "~4.1.2",
